--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
 
 	<meta name="robots" content="nofollow">
 
+	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:700italic' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" href="img/favicon-face.ico">
 	<link rel="icon" href="img/favicon-face.ico">
   	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
@@ -17,6 +19,7 @@
 
 <body>
 	<h1>Matt sucks.</h1>
+	<h2>And he deserves to know it.</h2>
 <!-- 	<form id="message">
 		<input type="text" placeholder="Fuck you, Matt.">
 		<input type="submit" value="Go">
