--- a/templates/index.html
+++ b/templates/index.html
@@ -11,20 +11,17 @@
 	<meta name="robots" content="nofollow">
 
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Merriweather:700italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700italic' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" href="img/favicon-face.ico">
 	<link rel="icon" href="img/favicon-face.ico">
   	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
 </head>
 
 <body>
-	<h1>Matt sucks.</h1>
+	<h1>Matt sucks</h1>
 	<h2>And he deserves to know it.</h2>
-<!-- 	<form id="message">
-		<input type="text" placeholder="Fuck you, Matt.">
-		<input type="submit" value="Go">
-	</form> -->
-	<button id="matt-sucks">Tell Matt he sucks</button>
+	<button id="matt-sucks">Tell Matt he sucks.</button>
+	<footer>Made with love :) by <a href="https://evantarrh.com">Evan</a>.</footer>
 	<script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
