testimonials added and working

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 	<meta name="robots" content="nofollow">
 
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700italic' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" href="img/favicon-face.ico">
-	<link rel="icon" href="img/favicon-face.ico">
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="http://dummyimage.com/100x100/87cefa/87cefa.png&text=+">
+	<link rel="icon" href="http://dummyimage.com/100x100/87cefa.png">
   	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
 </head>
 
@@ -21,7 +21,8 @@
 	<h1>Matt sucks</h1>
 	<h2>And he deserves to know it.</h2>
 	<button id="matt-sucks">Tell Matt he sucks.</button>
-	<footer>Made with love :) by <a href="https://evantarrh.com">Evan</a>.</footer>
+	<div id="testimonial">"It's about time someone streamlined the process of taking him down a notch." - Matt's mom</div>
+	<footer>Made with love by <a href="https://evantarrh.com">Evan</a>.</footer>
 	<script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
