--- a/static/css/app.css
+++ b/static/css/app.css
@@ -16,7 +16,7 @@ h1 {
 h2 {
 	color: #f0fafa;
 	font-family: Merriweather, serif;
-	font-weight: 700;
+	font-weight: 400;
 	font-style: italic;
 	margin: 0 0 3rem;
 
@@ -26,6 +26,7 @@ h2 {
 	font-size: 20px;
 	border: 1px;
 	padding: 1rem 3rem;
+	margin: 0 0 3rem;
 	word-spacing: 2px;
 	font-family: Montserrat, sans-serif;
 	box-shadow: 6px 6px 2px #7be;
@@ -39,6 +40,12 @@ h2 {
 	transform: translate(3px, 3px);
 }
 
+#testimonial {
+	font-family: Merriweather, serif;
+	font-weight: 400;
+	color: #377;
+}
+
 footer {
 	position: absolute;
 	font-size: 0.9rem;
@@ -50,7 +57,7 @@ footer {
 	width: 100%;
 	text-align: center;
 	padding-bottom: 0.5rem;
-	font-family: Merriweather;
+	font-family: Montserrat;
 }
 
 footer > a {
