--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 	<h1>Matt sucks</h1>
 	<h2>And he deserves to know it.</h2>
 	<button id="matt-sucks">Tell Matt he sucks.</button>
-	<div id="testimonial">"It's about time someone streamlined the process of taking him down a notch." - Matt's mom</div>
+	<div id="testimonial">"It's about time someone took him down a notch." - Matt's mom</div>
 	<footer>Made with love by <a href="https://evantarrh.com">Evan</a>.</footer>
 	<script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
