--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>	
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Matt sucks.</title>
+	<title>{{name}} sucks.</title>
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<meta name="description" content="Matt Piccolella is a piece of human garbage.">
 
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<h1>Matt sucks</h1>
+	<h1>{{name}} sucks</h1>
 	<h2>And he deserves to know it.</h2>
 	<button id="matt-sucks">Tell Matt he sucks.</button>
 	<div id="testimonial">"It's about time someone took him down a notch." - Matt's mom</div>
