--- a/templates/foundation.html
+++ b/templates/foundation.html
@@ -19,5 +19,7 @@
 
 	<body>
  		{% block body %}{% endblock %}
+
+ 		<footer>Made with love by <a href="http://evantarrh.com">Evan</a>. Special thanks to <a href="http://twitter.com/matthew_pic">Matt</a> for putting up with this monkey business.</footer>
 	</body>
 </html>
