--- a/templates/create.html
+++ b/templates/create.html
@@ -2,6 +2,13 @@
 {% block title %} {{ super() }} {% endblock %}
 {% block body %}
 
+<form method="POST" action="/create">
+    {{ form.csrf_token }}
+    {{ form.hidden_tag() }}
+    {{ form.first_name.label }} {{ form.first_name(size=20) }}
+    {{ form.last_name.label }} {{ form.last_name(size=20) }}
+    <input type="submit" value="Go">
+</form>
 
 
 
