--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,18 @@
 {% extends "foundation.html" %}
 {% block title %} {{ super() }} {% endblock %}
 {% block body %}
+<article
+	id="data"
+	data-firstname="{{first_name}}"
+	data-backgroundcolor="{{background_color}}"
+	data-font="{{font}}"
+	data-gender="{{gender}}">
+
+</article>
 
 <h1>{{first_name}} sucks</h1>
-<h2>And he deserves to know it.</h2>
-<button id="matt-sucks">Tell Matt he sucks.</button>
+<h2>And {{gender}} deserves to know it.</h2>
+<button id="matt-sucks">Tell {{first_name}} {{gender}} sucks.</button>
 <div id="testimonial">"It's about time someone took him down a notch." - Matt's mom</div>
 
 <script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
