--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,15 @@
 </article>
 
 <h1>{{first_name}} sucks</h1>
-<h2>And {{gender}} deserves to know it.</h2>
-<button id="matt-sucks">Tell {{first_name}} {{gender}} sucks.</button>
+
+{% if gender == "they" %}
+	<h2>And {{gender}} deserve to know it.</h2>
+	<button id="matt-sucks">Tell {{first_name}} {{gender}} suck.</button>
+{% else %}
+	<h2>And {{gender}} deserves to know it.</h2>
+	<button id="matt-sucks">Tell {{first_name}} {{gender}} sucks.</button>
+{% endif %}
+
 <div id="testimonial">"It's about time someone took him down a notch." - Matt's mom</div>
 
 <script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
