--- a/static/css/app.css
+++ b/static/css/app.css
@@ -49,14 +49,14 @@ table {
 
 html, body {
 	height: 100%;
-	background: #87cefa; /* Old browsers */
-	background: -moz-linear-gradient(top, #87cefa 0%, #88c8fc 50%, #5dabef 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#87cefa), color-stop(50%,#88c8fc), color-stop(100%,#5dabef)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #87cefa 0%,#88c8fc 50%,#5dabef 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #87cefa 0%,#88c8fc 50%,#5dabef 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #87cefa 0%,#88c8fc 50%,#5dabef 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #87cefa 0%,#88c8fc 50%,#5dabef 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#87cefa', endColorstr='#5dabef',GradientType=0 ); /* IE6-9 */
+	background: #87cefa;
+	/*background: -moz-linear-gradient(top, #87cefa 0%, #88c8fc 50%, #5dabef 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#87cefa), color-stop(50%,#88c8fc), color-stop(100%,#5dabef));
+	background: -webkit-linear-gradient(top, #87cefa 0%,#88c8fc 50%,#5dabef 100%);
+	background: -o-linear-gradient(top, #87cefa 0%,#88c8fc 50%,#5dabef 100%);
+	background: -ms-linear-gradient(top, #87cefa 0%,#88c8fc 50%,#5dabef 100%);
+	background: linear-gradient(to bottom, #87cefa 0%,#88c8fc 50%,#5dabef 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#87cefa', endColorstr='#5dabef',GradientType=0 );*/
 	text-align: center;
 	text-rendering: optimizeLegibility;
 	margin: 0;
@@ -91,7 +91,6 @@ button {
 	word-spacing: 2px;
 	font-family: Montserrat, sans-serif;
 	box-shadow: 6px 6px 2px #7ad;
-	transition: 0.2s all;
 	background-color: #f0fafa;
 	color: #7be;
 	cursor: pointer;
@@ -107,7 +106,7 @@ button:hover {
 	font-weight: 400;
 	font-size: 1.2rem;
 	line-height: 1.5rem;
-	color: #455996;
+	color: #666; /* ▐  ⊙ ▃ ⊙ ▐ */
 }
 
 form-container {
@@ -125,7 +124,7 @@ form {
 }
 
 form > input {
-	color: #7be;
+	color: #87cefa;
 	font: inherit;
 	width: 100%;
 	line-height: 2rem;
@@ -138,17 +137,10 @@ form > input {
 	font-size: 100%;
 	vertical-align: baseline;
 	display: block;
+	/*transition: 0.2s ease all */
 }
 
-form:first-child {
-	border-top: 0;
-}
-
-form:last-child {
-	border-top: 0;
-}
-
-form > input:active, form > input:focus {
+form > input:active, form > input:focus, button:active, button:focus {
 	outline: 0;
 	outline-style: none;
 	outline-width: 0;
@@ -158,17 +150,29 @@ form > label {
 	display: none;
 }
 
+#first_name {
+	border-top: 0;
+	border-radius: 4px 4px 0 0;
+}
+
+#phone_number {
+	border-bottom: 0;
+	border-radius: 0 0 4px 4px;
+}
+
 #submit-button {
 	border-top: 0;
 	border: 0;
+	line-height: 2rem;
 	font-size: 1.25rem;
 	cursor: pointer;
 	color: #f0fafa;
 	text-shadow: 1px 1px 1px #444;
 	background-color: #48d;
 	width: 330px;
-	padding: 5px;
-	margin: 10px 0;
+	padding: 15px;
+	margin: 25px 0;
+	transition: 0.2s ease all;
 }
 
 #submit-button:hover {
