--- a/templates/create.html
+++ b/templates/create.html
@@ -9,7 +9,7 @@
 {% endif %}
 
 <div class="form-container">
-    <form method="POST" action="/create-page">
+    <form method="POST" action="/create">
         {{ form.csrf_token }}
         {{ form.hidden_tag() }}
         {{ form.first_name.label }} {{ form.first_name(size=20, placeholder="First name")}}
