lots of db fixes, js uses some html data now

--- a/templates/create.html
+++ b/templates/create.html
@@ -16,7 +16,7 @@
         {{ form.last_name.label }} {{ form.last_name(size=20, placeholder="Last name") }}
         {{ form.phone_number.label }} {{ form.phone_number(size=20, placeholder="Phone number") }}
 
-        <input type="submit" id="submit-button" value="Take 'em down a notch">
+        <input type="submit" class="valid-submit" id="submit-button" value="Take 'em down a notch">
     </form>
 </div>
 
