--- a/static/css/app.css
+++ b/static/css/app.css
@@ -78,10 +78,10 @@ h2 {
 	font-family: Merriweather, serif;
 	font-weight: 400;
 	font-style: italic;
+	font-size: 1.4rem;
 	line-height: 1.8rem;
 	height: 2rem;
 	margin: 0 0 3rem;
-
 }
 
 button {
@@ -175,6 +175,7 @@ input[type=text], input[type=submit] {
 }
 
 #submit-button {
+	visibility: hidden;
 	border: 0;
 	border-radius: none;
 	line-height: 2rem;
@@ -183,7 +184,7 @@ input[type=text], input[type=submit] {
 	width: 330px;
 	padding: 15px;
 	margin: 25px 0;
-	transition: 0.3s ease all;
+	transition: 0.5s ease all;
 	-webkit-appearance: none;
 }
 
