--- a/templates/foundation.html
+++ b/templates/foundation.html
@@ -20,6 +20,14 @@
 	<body>
  		{% block body %}{% endblock %}
 
- 		<footer>Made with love by <a href="http://evantarrh.com">Evan</a>. Special thanks to <a href="http://twitter.com/matthew_pic">Matt</a> for putting up with this monkey business.</footer>
+ 		<footer>
+ 			<span class="footer-left">
+ 				Made with love by <a href="http://evantarrh.com">Evan</a> and <a href="http://benie.me">Ben</a>.
+ 			</span>
+ 			<span class="footer-right">
+ 				Sending texts is expensive!
+ 				<a href="https://venmo.com/?txn=pay&recipients=evantarrh&amount=1.00&note=Telling%20my%20friend%20they%20suck.&audience=private">Venmo us $1.00.</a>
+ 			</span>
+ 		</footer>
 	</body>
 </html>
