--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,14 @@
 
 </article>
 
-{% if first-time %}
 <div class="alert-container">
 	<div class="alert">
 		Nice! You've successfully created a page for {{first_name}}.
 	</div>
+	<div class="close">
+		X
+	</div>
 </div>
-{% endif %}
 
 <h1>{{first_name}} sucks</h1>
 
