improved button behavior after 3 clicks; text count animates

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,10 +29,10 @@
 
 {% if gender == "they" %}
 	<h2>And {{gender}} deserve to know it.</h2>
-	<button id="matt-sucks">Tell {{first_name}} {{gender}} suck.</button>
+	<button id="hater-button">Tell {{first_name}} {{gender}} suck.</button>
 {% else %}
 	<h2>And {{gender}} deserves to know it.</h2>
-	<button id="matt-sucks">Tell {{first_name}} {{gender}} sucks.</button>
+	<button id="hater-button">Tell {{first_name}} {{gender}} sucks.</button>
 {% endif %}
 
 <div id="testimonial"></div>
