--- a/templates/foundation.html
+++ b/templates/foundation.html
@@ -12,8 +12,8 @@
 
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700italic' rel='stylesheet' type='text/css'>
-		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-		<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+		<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 	  	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
 	</head>
 
