--- a/static/css/app.css
+++ b/static/css/app.css
@@ -254,6 +254,7 @@ input[type=text], input[type=submit] {
 	color: #666;
 	font-family: Montserrat, sans-serif;
 	width: 100%;
+	box-shadow: 0 20px #87cefa;
 }
 
 #number {
