--- a/static/css/app.css
+++ b/static/css/app.css
@@ -84,11 +84,41 @@ html, body {
 	position: absolute;
 	right: 25px;
 	float: right;
+	margin-top: -3px;
 }
 
 .close:hover {
 	color: #999;
 	cursor: pointer;
+}
+
+#modal-backdrop {
+	background:rgba(0,0,0,.5);
+	height: 100%;
+	left: 0;
+	display: flex;
+	overflow: auto;
+	padding: 1.5em;
+	position: fixed;
+	top: 0;
+	transition: opacity .2s;
+	width: 100%;
+	z-index: 1;
+}
+
+#modal {
+	background: #fff;
+	margin: auto;
+	max-width: 800px;
+	overflow: auto;
+	overflow-x: hidden;
+	padding: 1.5em;
+	position: relative;
+	transform: scale(.8);
+	transition: transform .3s;
+	width: 100%;
+	font-family: Montserrat, sans-serif;
+	color: #666;
 }
 
 h1 {
@@ -294,6 +324,8 @@ footer > span > a {
 	float: right;
 	padding-right: 10%;
 }
+
+
 
 @media only screen and (max-width: 800px) {
 	html, body {
