modal is superpowered with styles and everything

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,15 @@
 		<div class="modal-info">
 			Nice! You've successfully created a page for {{first_name}}.
 		</div>
+		<div id="link-container">
+			<a href="/{{urlstring}}" id="splash-link">downanotch.co/{{urlstring}}</a>
+		</div>
+		<div class="modal-info">
+			Share this link with your friends!
+		</div>
+		<div class="butt">
+			(But not {{first_name}}.)
+		</div>
 	</div>
 </div>
 {% endif %}
