--- a/static/css/app.css
+++ b/static/css/app.css
@@ -85,6 +85,7 @@ html, body {
 	right: 25px;
 	float: right;
 	margin-top: -3px;
+	font-size: 1.5rem;
 }
 
 .close:hover {
@@ -98,7 +99,6 @@ html, body {
 	left: 0;
 	display: flex;
 	overflow: auto;
-	padding: 1.5em;
 	position: fixed;
 	top: 0;
 	transition: opacity .2s;
@@ -112,13 +112,42 @@ html, body {
 	max-width: 800px;
 	overflow: auto;
 	overflow-x: hidden;
-	padding: 1.5em;
+	padding: 2.5rem 1rem;
 	position: relative;
 	transform: scale(.8);
 	transition: transform .3s;
 	width: 100%;
 	font-family: Montserrat, sans-serif;
 	color: #666;
+	top: -15%;
+}
+
+#modal-close {
+	right: 10px;
+	top: 8px;
+}
+
+#link-container {
+	font-size: 2.5rem;
+	padding: 20px 0;
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+#splash-link {
+	font-size: 2.5rem;
+	text-decoration: none;
+}
+
+.modal-info {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+
+.butt {
+	font-size: 1.1rem;
 }
 
 h1 {
@@ -326,7 +355,6 @@ footer > span > a {
 }
 
 
-
 @media only screen and (max-width: 800px) {
 	html, body {
 		font-size: 14px;
@@ -371,17 +399,30 @@ footer > span > a {
 		font-size: 5rem;
 		padding: 2rem 0 1rem;
 	}
+	#splash-link {
+		font-size: 2rem;
+	}
+	.modal-info {
+		font-size: 1.3rem;
+		line-height: 1.9rem;
+	}
 }
 
 @media only screen and (max-width: 480px) {	
 	h1 {
 		font-size: 4rem;
 	}
+	#splash-link {
+		font-size: 1.8rem;
+	}
 }
 
 @media only screen and (max-width: 400px) {	
 	h1 {
 		font-size: 3.5rem;
+	}
+	#splash-link {
+		font-size: 1.6rem;
 	}
 }
 
