--- a/templates/create.html
+++ b/templates/create.html
@@ -13,6 +13,13 @@
 </div>
 {% endif %}
 
+<h1 id="create-title">For that special someone...</h1>
+<h2>We all have a friend who needs an ego check.</h2>
+
+<div id="create-info">
+    Fill out the form with your friend's info, and you'll create a page dedicated to your friend and how much they suck. Better yet, you can click a button, and we'll send them a text that tells them they suck.
+</div>
+
 <div class="form-container">
     <form method="POST" action="/create">
         {{ form.csrf_token }}
