--- a/templates/index.html
+++ b/templates/index.html
@@ -46,10 +46,10 @@
 
 <div id="testimonial"></div>
 
-<div id="text-count">
+<!-- <div id="text-count">
 	<div id="number">{{text_count}}</div>
 	<div>texts have been sent to {{first_name}}'s phone.</div>
-</div>
+</div> -->
 
 <script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
