--- a/templates/foundation.html
+++ b/templates/foundation.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>{{page_title}}</title>
-	  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  	<meta name="description" content="Matt Piccolella is a piece of human garbage.">
+<head>
+	<meta charset="utf-8">
+	<title>{{page_title}}</title>
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<meta name="description" content="Matt Piccolella is a piece of human garbage.">
 
-		<meta name="author" content="Evan Tarrh">
+	<meta name="author" content="Evan Tarrh">
 
-		<meta name="robots" content="nofollow">
+	<meta name="robots" content="nofollow">
 
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700italic' rel='stylesheet' type='text/css'>
-		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-		<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-	  	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
-	</head>
+	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+	<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+  	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
+</head>
 
-	<body>
- 		{% block body %}{% endblock %}
+<body>
+	<div class="wrapper">
+		<div class="content">
+			{% block body %}{% endblock %}
 
- 		<footer>
- 			<span class="footer-left">
- 				Made with love by <a href="http://evantarrh.com">Evan</a> and <a href="http://benie.me">Ben</a>.
- 			</span>
- 			<span class="footer-right">
- 				Sending texts is expensive!
- 				<a href="https://venmo.com/?txn=pay&recipients=evantarrh&amount=1.00&note=Telling%20my%20friend%20they%20suck.&audience=private">Venmo us $1.00.</a>
- 			</span>
- 		</footer>
-	</body>
+			<footer>
+				<span class="footer-left">
+					Made with love by <a href="http://evantarrh.com">Evan</a> and <a href="http://benie.me">Ben</a>.
+				</span>
+				<span class="footer-right">
+					Sending texts is expensive!
+					<a href="https://venmo.com/?txn=pay&recipients=evantarrh&amount=1.00&note=Telling%20my%20friend%20they%20suck.&audience=private">Venmo us $1.00.</a>
+				</span>
+			</footer>
+		</div>
+	</div>
+</body>
 </html>
