adding 404 page bc obv

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -308,6 +308,10 @@ input[type=text], input[type=submit] {
 	cursor: auto;
 }
 
+img {
+	max-width: 100%;
+}
+
 ::-webkit-input-placeholder { /* WebKit browsers */
 	color: #aaa;
 }
