tiny useless fixes bc i am a thankless drone

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,7 +7,7 @@
 <h2>And so does your URL. This is a 404 page.</h2>
 
 <div id="create-info">
-    <img src="http://media.giphy.com/media/mPytjcsG3XS4o/giphy.gif" />
+    <img src="http://media2.giphy.com/media/C1ODiCUL8VO9O/giphy.gif" />
 </div>
 
 <script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
