--- a/static/css/app.css
+++ b/static/css/app.css
@@ -93,8 +93,8 @@ html, body {
 	position: absolute;
 	right: 25px;
 	float: right;
-	margin-top: -3px;
 	font-size: 1.5rem;
+	color: #666;
 }
 
 .close:hover {
@@ -121,7 +121,7 @@ html, body {
 	max-width: 800px;
 	overflow: auto;
 	overflow-x: hidden;
-	padding: 2.5rem 1rem;
+	padding: 2.5rem 2rem;
 	position: relative;
 	transform: scale(.8);
 	transition: transform .3s;
@@ -134,6 +134,7 @@ html, body {
 #modal-close {
 	right: 10px;
 	top: 8px;
+	font-size: 2rem;
 }
 
 #link-container {
@@ -173,6 +174,11 @@ h1 {
 	padding: 2rem 0 1rem;
 }
 
+#create-subtitle {
+	color: #7e513f;
+	margin: 0 0 1.5rem;
+}
+
 h2 {
 	color: #f0fafa;
 	font-family: Merriweather, serif;
@@ -186,7 +192,7 @@ h2 {
 #create-info {
 	margin: auto;
 	font-family: Merriweather, serif;
-	color: #666; /* ▐  ⊙ ▃ ⊙ ▐ */
+	color: #333; /* ▐  ⊙ ▃ ⊙ ▐ */
 	max-width: 600px;
 	line-height: 1.5rem;
 }
