--- a/static/css/app.css
+++ b/static/css/app.css
@@ -138,7 +138,6 @@ html, body {
 }
 
 #link-container {
-	font-size: 2.5rem;
 	padding: 20px 0;
 	width: 100%;
 	white-space: nowrap;
@@ -435,8 +434,11 @@ footer > span > a {
 		font-size: 5rem;
 		padding: 2rem 0 1rem;
 	}
+	#link-container {
+		padding: 10px 0;
+	}
 	#splash-link {
-		font-size: 2rem;
+		font-size: 1.6rem;
 	}
 	form > input {
 		padding: 10px;
@@ -450,6 +452,7 @@ footer > span > a {
 	}
 	#modal {
 		top: 0;
+		padding: 2.5rem 1rem;
 	}
 }
 
@@ -464,7 +467,7 @@ footer > span > a {
 		font-size: 2.5rem;
 	}
 	#splash-link {
-		font-size: 1.8rem;
+		font-size: 1.3rem;
 	}
 }
 
@@ -473,7 +476,7 @@ footer > span > a {
 		font-size: 3.5rem;
 	}
 	#splash-link {
-		font-size: 1.6rem;
+		font-size: 1.2rem;
 	}
 }
 
