--- a/static/css/app.css
+++ b/static/css/app.css
@@ -205,21 +205,39 @@ button:hover {
 	color: #666; /* ▐  ⊙ ▃ ⊙ ▐ */
 }
 
+.create-container {
+	width: 100%;
+	height: 100%;
+}
+
 .form-container {
 	width: 50%;
 	text-align: center;
 	float: right;
+	position: relative;
+	top: 3rem;
+}
+
+.phone-container {
+	display: inline-block;
+	float: left;
+	height: 755px;
+	width: 360px;
+}
+
+#iphone {
+	width: 342px;
 }
 
 form {
 	font-family: Montserrat, sans-serif;
 	font-weight: 400px;
-	margin: 30px 30px 0 0;
 	width: 300px;
 	display: inline-block;
 	-webkit-appearance: none;
 	position: relative;
 	right: 2rem;
+	padding-left: 30px;
 }
 
 form > input {
@@ -298,7 +316,7 @@ input[type=text], input[type=submit] {
 	cursor: auto;
 }
 
-img {
+.lost {
 	max-width: 100%;
 	padding-bottom: 20px;
 }
