--- a/templates/create.html
+++ b/templates/create.html
@@ -13,17 +13,21 @@
 </div>
 {% endif %}
 
-<div class="form-container">
-    <form method="POST" action="/create">
-        {{ form.csrf_token }}
-        {{ form.hidden_tag() }}
-        {{ form.first_name.label }} {{ form.first_name(size=20, placeholder="First name")}}
-        {{ form.last_name.label }} {{ form.last_name(size=20, placeholder="Last name") }}
-        {{ form.phone_number.label }} {{ form.phone_number(size=20, placeholder="Phone number") }}
-        <input type="submit" class="valid-submit" id="submit-button" value="Take 'em down a notch">
-    </form>
+<div class="create-container">
+    <div class="phone-container">
+        <img id="iphone" src="https://d163x6kevlpuov.cloudfront.net/production/images/iphone-silver-cropped.png" />
+    </div>
+    <div class="form-container">
+        <form method="POST" action="/create">
+            {{ form.csrf_token }}
+            {{ form.hidden_tag() }}
+            {{ form.first_name.label }} {{ form.first_name(size=20, placeholder="First name")}}
+            {{ form.last_name.label }} {{ form.last_name(size=20, placeholder="Last name") }}
+            {{ form.phone_number.label }} {{ form.phone_number(size=20, placeholder="Phone number") }}
+            <input type="submit" class="valid-submit" id="submit-button" value="Take 'em down a notch">
+        </form>
+    </div>
 </div>
-
 
 <script src="{{ url_for('static', filename='js/form.js') }}"></script>
 
